<resources>
    <string name="app_name">Mason Check-in Kiosk</string>

    <!-- Sign in -->
    <string name="kiosk_checkin_sign_in_title">Sign in</string>
    <string name="kiosk_checkin_sign_in_email_hint">Email</string>
    <string name="kiosk_checkin_sign_in_password_hint">Password</string>
    <string name="kiosk_checkin_sign_in_email_invalid_error">Invalid email address</string>
    <string name="kiosk_checkin_sign_in_email_unknown_error">
        Account not found. Create an account in the Console.
    </string>
    <string name="kiosk_checkin_sign_in_password_error">Oops, wrong password</string>
    <string name="kiosk_checkin_sign_in_submit_button_title">Sign in</string>

    <!-- Check-in -->
    <string name="kiosk_checkin_menu_option_restart_title">Restart</string>

    <!-- Identity -->
    <string name="kiosk_checkin_identity_title">Welcome!</string>

    <string name="kiosk_checkin_identity_field_hint_title">%s (Optional)</string>
    <string name="kiosk_checkin_identity_field_invalid_error">Invalid %s</string>

    <string name="kiosk_checkin_identity_continue_button_title">Check in</string>

    <!-- Host Finder -->
    <string name="kiosk_checkin_host_finder_title">Who are you here to see?</string>
    <string name="kiosk_checkin_host_finder_search_hint">Host name</string>
    <string name="kiosk_checkin_host_finder_no_hosts_message">
        Try searching for a current employee, intern, or TVC.
    </string>

    <!-- NDA -->
    <string name="kiosk_checkin_nda_title">Sign the NDA</string>

    <!-- Report -->
    <string name="kiosk_checkin_report_title">You\'re all set</string>
    <string name="kiosk_checkin_report_info_title">Check-in complete</string>
    <string name="kiosk_checkin_report_info_body">We\'ll let your host know you\'re here.</string>
    <string name="kiosk_checkin_report_continue_button_title">Done</string>
</resources>
